--- a/html/main01.html
+++ b/html/main01.html
@@ -15,7 +15,7 @@
 
 <body>
   <div id="wrap">
-    <header class="">
+    <header id="header" class="">
       <h1>
         <button type="button">로고</button>
       </h1>
@@ -489,7 +489,7 @@
     </main>
   </div>
   <!--//wrap-->
-  <footer>
+  <footer class="fixed">
     <button type="button" class="home on"><i></i>홈</button>
     <button type="button" class="talk"><i></i>펜팔</button>
     <button type="button" class="add"><i></i></button>
