--- a/html/main01.html
+++ b/html/main01.html
@@ -489,7 +489,7 @@
     </main>
   </div>
   <!--//wrap-->
-  <footer class="fixed">
+  <footer class="">
     <button type="button" class="home on"><i></i>홈</button>
     <button type="button" class="talk"><i></i>펜팔</button>
     <button type="button" class="add"><i></i></button>
