--- a/index.html
+++ b/index.html
@@ -281,6 +281,15 @@
             <td>종합</td>
             <td></td>
             <td></td>
+            <td><a href="./html/mybook.html">mybook.html</a></td>
+            <td class="b"></td>
+          </tr>
+          <tr>
+            <td>MO</td>
+            <td>뉴스</td>
+            <td>종합</td>
+            <td></td>
+            <td></td>
             <td><a href="./html/main.html">main.html</a></td>
             <td class="r"></td>
           </tr>
