--- a/html/mybook.html
+++ b/html/mybook.html
@@ -80,9 +80,44 @@
     <!--//nav-wrap-->
     <main>
 
+      <div class="mybook-list flex-justify">
+        <div class="list">
+          <div>
+            <button><img src="../images/img-banner-03.png" alt="" /></button>
+            <span>딩고뮤직/스우파맨</span>
+          </div>
+          <div>
+            <button><img src="../images/img-banner-03.png" alt="" /></button>
+            <span>딩고뮤직/스우파맨</span>
+          </div>
+          <div>
+            <button><img src="../images/img-banner-03.png" alt="" /></button>
+            <span>딩고뮤직/스우파맨</span>
+          </div>
+          <div>
+            <button><img src="../images/img-banner-03.png" alt="" /></button>
+            <span>딩고뮤직/스우파맨</span>
+          </div>
+          <div>
+            <button><img src="../images/img-banner-03.png" alt="" /></button>
+            <span>딩고뮤직/스우파맨</span>
+          </div>
+          <div>
+            <button><img src="../images/img-banner-03.png" alt="" /></button>
+            <span>딩고뮤직/스우파맨</span>
+          </div>
+          <div>
+            <button><img src="../images/img-banner-03.png" alt="" /></button>
+            <span>딩고뮤직/스우파맨</span>
+          </div>
+
+        </div>
+        <button class="btn-all">
+          전체
+        </button>
+      </div>
 
       <section class="mybook-wrap">
-        <h2 class="title">펜팔 주간베스트 <button type="button" class="more">더보기</button></h2>
 
         <div class="cont">
 
@@ -91,15 +126,53 @@
               <img src="../images/img-banner-03.png" alt="" />
             </button>
           </div>
-          <div class="txt">
-            유엔 진실·정의 특별보고관 만난 이용수 할머니유엔 진실·정의
-            특별보고관 만난 이용수 할머니유엔 진실·정의 특별보고관 만난 이용수 할머니유엔 진실·정의
-            특별보고관 만난 이용수 할머니
+          <div class="text">
+            <div class="txt">
+              유엔 진실·정의 특별보고관 만난 이용수 할머니유엔 진실·정의
+              특별보고관 만난 이용수 할머니유엔 진실·정의 특별보고관 만난 이용수 할머니유엔 진실·정의
+              특별보고관 만난 이용수 할머니
+            </div>
+
+
+            <button class="more " onclick="document.getElementById('myModal').style.display='block'">구독</button>
           </div>
-          <div class="etc">
-            <span class="view"><i></i>72.42</span>
-            <span class="comment"><i></i>156</span>
-            <span class="like"><i></i>326</span>
+          <div class="flex-justify">
+            <div class="etc-cont">
+              <span class="view"><i></i>72.42</span>
+              <span class="comment"><i></i>156</span>
+              <span class="like"><i></i>326</span>
+            </div>
+            <div class="share-cont">
+              <button><i class="ic-share"></i>공유하기</button>
+            </div>
+          </div>
+
+
+        </div><!--//cont-->
+        <div class="cont">
+
+          <div class="photo">
+            <button>
+              <img src="../images/img-banner-03.png" alt="" />
+            </button>
+          </div>
+          <div class="text">
+            <div class="txt">
+              유엔 진실·정의 특별보고관 만난 이용수 할머니유엔 진실·정의
+              특별보고관 만난 이용수 할머니유엔 진실·정의 특별보고관 만난 이용수 할머니유엔 진실·정의
+              특별보고관 만난 이용수 할머니
+            </div>
+            <button class="more" onclick="document.getElementById('myModal').style.display='block'"s >구독</button>
+          </div>
+          <div class="flex-justify">
+            <div class="etc-cont">
+              <span class="view"><i></i>72.42</span>
+              <span class="comment"><i></i>156</span>
+              <span class="like"><i></i>326</span>
+            </div>
+            <div class="share-cont">
+              <button><i class="ic-share"></i>공유하기</button>
+            </div>
           </div>
 
         </div><!--//cont-->
@@ -110,38 +183,48 @@
               <img src="../images/img-banner-03.png" alt="" />
             </button>
           </div>
-          <div class="txt">
-            유엔 진실·정의 특별보고관 만난 이용수 할머니유엔 진실·정의
-            특별보고관 만난 이용수 할머니유엔 진실·정의 특별보고관 만난 이용수 할머니유엔 진실·정의
-            특별보고관 만난 이용수 할머니
+          <div class="text">
+            <div class="txt">
+              유엔 진실·정의 특별보고관 만난 이용수 할머니유엔 진실·정의
+              특별보고관 만난 이용수 할머니유엔 진실·정의 특별보고관 만난 이용수 할머니유엔 진실·정의
+              특별보고관 만난 이용수 할머니
+            </div>
+            <button class="more" onclick="document.getElementById('myModal').style.display='block'">구독</button>
           </div>
-          <div class="share-cont">
-            <button><i class="ic-share"></i>공유하기</button>
-            <button><i class="ic-like"></i>좋아요 1.4천</button>
-          </div>
-
-        </div><!--//cont-->
-        <div class="cont">
-
-          <div class="photo">
-            <button>
-              <img src="../images/img-banner-03.png" alt="" />
-            </button>
-          </div>
-          <div class="txt">
-            유엔 진실·정의 특별보고관 만난 이용수 할머니유엔 진실·정의
-            특별보고관 만난 이용수 할머니유엔 진실·정의 특별보고관 만난 이용수 할머니유엔 진실·정의
-            특별보고관 만난 이용수 할머니
-          </div>
-          <div class="share-cont">
-            <button><i class="ic-share"></i>공유하기</button>
-            <button><i class="ic-like"></i>좋아요 1.4천</button>
+          <div class="flex-justify">
+            <div class="etc-cont">
+              <span class="view"><i></i>72.42</span>
+              <span class="comment"><i></i>156</span>
+              <span class="like"><i></i>326</span>
+            </div>
+            <div class="share-cont">
+              <button><i class="ic-share"></i>공유하기</button>
+            </div>
           </div>
 
         </div><!--//cont-->
 
       </section>
 
+      <div id="myModal" class="modal-cont">
+        <div class="cont modal-close">
+          <button class="text-red" onclick="modal.style.display='none'"><span class="img"><img src="../images/img-banner-03.png" alt="" /></span> 구독취소</button>
+          <button onclick="modal.style.display='none'"><span class="img"><img src="../images/img-banner-03.png" alt="" /></span> 숨기기</button>
+        </div>
+      </div>
+
+      <script>
+
+        // Get the modal
+        var modal = document.getElementById('myModal');
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function(event) {
+          if (event.target == modal) {
+            modal.style.display = "none";
+          }
+        }
+      </script>
 
 
 
