--- a/html/mybook.html
+++ b/html/mybook.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
 
-<!--  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />-->
+  <!--  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />-->
   <link rel="stylesheet" href="../css/main.css" />
   <script type="text/javascript" src="../js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="../js/front.js"></script>
@@ -85,14 +85,18 @@
           <div>
             <button><img src="../images/img-banner-03.png" alt="" /></button>
             <span>딩고뮤직/스우파맨</span>
+            <em>on</em>
+
           </div>
           <div>
             <button><img src="../images/img-banner-03.png" alt="" /></button>
             <span>딩고뮤직/스우파맨</span>
+            <em>on</em>
           </div>
           <div>
             <button><img src="../images/img-banner-03.png" alt="" /></button>
             <span>딩고뮤직/스우파맨</span>
+            <em style="background-color: red ;">on</em>
           </div>
           <div>
             <button><img src="../images/img-banner-03.png" alt="" /></button>
@@ -134,21 +138,55 @@
             </div>
 
 
+
+            <div class="">
+              <div class="date">
+                <b>세일러목</b> <span class="date">2022.10.14</span>
+              </div>
+              <div class="etc-cont">
+                <span class="view"><i></i>72.42</span>
+                <span class="comment"><i></i>156</span>
+                <span class="like"><i></i>326</span>
+              </div>
+
+            </div>
             <button class="more " onclick="document.getElementById('myModal').style.display='block'">구독</button>
-          </div>
-          <div class="flex-justify">
-            <div class="etc-cont">
-              <span class="view"><i></i>72.42</span>
-              <span class="comment"><i></i>156</span>
-              <span class="like"><i></i>326</span>
-            </div>
-            <div class="share-cont">
-              <button><i class="ic-share"></i>공유하기</button>
-            </div>
+
           </div>
 
 
-        </div><!--//cont-->
+        </div>
+        <!--//cont-->
+        <div class="cont">
+
+
+          <div class="text">
+            <div class="txt">
+              유엔 진실·정의 특별보고관 만난 이용수 할머니유엔 진실·정의
+              특별보고관 만난 이용수 할머니유엔 진실·정의 특별보고관 만난 이용수 할머니유엔 진실·정의
+              특별보고관 만난 이용수 할머니
+            </div>
+
+
+
+            <div class="">
+              <div class="date">
+                <b>세일러목</b> <span class="date">2022.10.14</span>
+              </div>
+              <div class="etc-cont">
+                <span class="view"><i></i>72.42</span>
+                <span class="comment"><i></i>156</span>
+                <span class="like"><i></i>326</span>
+              </div>
+
+            </div>
+            <button class="more " onclick="document.getElementById('myModal').style.display='block'">구독</button>
+
+          </div>
+
+
+        </div>
+        <!--//cont-->
         <div class="cont">
 
           <div class="photo">
@@ -162,64 +200,45 @@
               특별보고관 만난 이용수 할머니유엔 진실·정의 특별보고관 만난 이용수 할머니유엔 진실·정의
               특별보고관 만난 이용수 할머니
             </div>
-            <button class="more" onclick="document.getElementById('myModal').style.display='block'"s >구독</button>
-          </div>
-          <div class="flex-justify">
-            <div class="etc-cont">
-              <span class="view"><i></i>72.42</span>
-              <span class="comment"><i></i>156</span>
-              <span class="like"><i></i>326</span>
+
+
+
+            <div class="">
+              <div class="date">
+                <b>세일러목</b> <span class="date">2022.10.14</span>
+              </div>
+              <div class="etc-cont">
+                <span class="view"><i></i>72.42</span>
+                <span class="comment"><i></i>156</span>
+                <span class="like"><i></i>326</span>
+              </div>
+
             </div>
-            <div class="share-cont">
-              <button><i class="ic-share"></i>공유하기</button>
-            </div>
+            <button class="more " onclick="document.getElementById('myModal').style.display='block'">구독</button>
+
           </div>
 
-        </div><!--//cont-->
-        <div class="cont">
 
-          <div class="photo">
-            <button>
-              <img src="../images/img-banner-03.png" alt="" />
-            </button>
-          </div>
-          <div class="text">
-            <div class="txt">
-              유엔 진실·정의 특별보고관 만난 이용수 할머니유엔 진실·정의
-              특별보고관 만난 이용수 할머니유엔 진실·정의 특별보고관 만난 이용수 할머니유엔 진실·정의
-              특별보고관 만난 이용수 할머니
-            </div>
-            <button class="more" onclick="document.getElementById('myModal').style.display='block'">구독</button>
-          </div>
-          <div class="flex-justify">
-            <div class="etc-cont">
-              <span class="view"><i></i>72.42</span>
-              <span class="comment"><i></i>156</span>
-              <span class="like"><i></i>326</span>
-            </div>
-            <div class="share-cont">
-              <button><i class="ic-share"></i>공유하기</button>
-            </div>
-          </div>
-
-        </div><!--//cont-->
+        </div>
+        <!--//cont-->
 
       </section>
 
       <div id="myModal" class="modal-cont">
         <div class="cont modal-close">
-          <button class="text-red" onclick="modal.style.display='none'"><span class="img"><img src="../images/img-banner-03.png" alt="" /></span> 구독취소</button>
-          <button onclick="modal.style.display='none'"><span class="img"><img src="../images/img-banner-03.png" alt="" /></span> 숨기기</button>
+          <button class="text-red" onclick="modal.style.display='none'"><span class="img"><img
+                src="../images/img-banner-03.png" alt="" /></span> 구독취소</button>
+          <button onclick="modal.style.display='none'"><span class="img"><img src="../images/img-banner-03.png"
+                alt="" /></span> 숨기기</button>
         </div>
       </div>
 
       <script>
-
         // Get the modal
         var modal = document.getElementById('myModal');
 
         // When the user clicks anywhere outside of the modal, close it
-        window.onclick = function(event) {
+        window.onclick = function (event) {
           if (event.target == modal) {
             modal.style.display = "none";
           }
